<resources>
    <string name="app_name" translatable="false">Day Dreaming</string>
    <string name="url_service" translatable="false">http://10.0.2.2:3000/</string>

    <string name="loading">Loading…</string>
    <string name="message_error_service_call">Oops! Something went wrong, please try again.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Login</string>
    <string name="field_required">Field required</string>
    <string name="the_email_not_valid">The email is not valid</string>
    <string name="home_custom">Custom</string>
    <string name="home_trending">Trending</string>
    <string name="home_random">Random</string>
    <string name="start_dreaming">Start Daydreaming</string>
    <string name="review">REVIEW TUTORIAL</string>
    <string name="rate">RATE APP</string>
    <string name="about">ABOUT</string>
    <string name="login">LOG IN</string>
    <string name="music_mood">Music Mood</string>
    <string name="chill">Chill</string>
    <string name="energetic">Energetic</string>
    <string name="neutral">Neutral</string>
    <string name="video_theme">Video Theme</string>
    <string name="art">Art</string>
    <string name="nature">Nature</string>
    <string name="travel">Travel</string>
    <string name="animals">Animals</string>
    <string name="sports">Sports</string>
    <string name="food">Food</string>
    <string name="about_us">About us</string>
    <string name="what_do_we_do">What do we do?</string>
    <string name="contact_us">Contact us</string>
    <string name="about_text">
        Lorem ipsum dolor sit amet,consectetur adipiscing elit. Morbi sit amet
        tortor eget leo dictum egestas.Donec eu est eget lacus lacinia elementum
        eu in lectus. Vivamus velit est,fermentum lacinia sollicitudin faucibus,
        ultrices eget eros.
    </string>
    <string name="random_daydream">Random daydream</string>
    <string name="create_user">Create user</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="password_length_error">Password must be at least 5 digit long.</string>
    <string name="rate_app_now">Do you want to rate our app now?</string>
    <string name="rate_button">Rate</string>
    <string name="is_loading">Your DayDream is loading&#8230;</string>
    <string name="on_boarding_text">The best video and music paired on the fly.</string>
    <string name="wrong_user">Wrong user account.</string>
    <string name="wrong_pass">Wrong password.</string>
    <string name="user">chaca</string>
    <string name="pass">chaca</string>
    <string name="xmartlabs_url">http://www.xmartlabs.com</string>
</resources>
