<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        >

        <TextView
            android:id="@+id/mood_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/music_mood"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:id="@+id/seekbar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mood_text_view"
            android:layout_marginTop="40dp"
            >

            <SeekBar
                android:id="@+id/mood_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:progressDrawable="@drawable/progress_seekbar"
                android:thumb="@drawable/thumb"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/mood_seekbar"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/chiil"
                android:textColor="@color/white"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/mood_seekbar"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/energetic"
                android:textColor="@color/white"
                android:textSize="14sp"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/start_daydreaming_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/double_square_shape_2"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/start_dreaming_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/start_dreaming"
                android:textAllCaps="true"
                android:textColor="@color/warm_grey"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_above="@id/start_daydreaming_linearlayout"
            android:layout_below="@id/seekbar_view"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/video_theme_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/video_theme"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/art_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/art"
                style="@style/VideoThemeOptions"
                />

            <TextView
                android:id="@+id/nature_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nature"
                style="@style/VideoThemeOptions"
                />

            <TextView
                android:id="@+id/travel_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                style="@style/VideoThemeOptions"
                />

            <TextView
                android:id="@+id/animals_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/animals"
                style="@style/VideoThemeOptions"
                />

            <TextView
                android:id="@+id/sports_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports"
                style="@style/VideoThemeOptions"
                />

            <TextView
                android:id="@+id/food_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food"
                style="@style/VideoThemeOptions"
                />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
