<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    >

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/custom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home_custom"
        android:text="@string/home_custom"
        android:textColor="@color/warm_grey"
        app:diagonal_angle="7"
        />

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/first_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        app:diagonal_angle="7"
        />

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/trending"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home_trending"
        android:text="@string/home_trending"
        android:textColor="@color/warm_grey"
        app:diagonal_angle="7"
        />

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/second_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        app:diagonal_angle="7"
        />

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/home_random"
        android:text="@string/home_random"
        android:textColor="@color/warm_grey"
        app:diagonal_angle="7"
        />

    <com.xmartlabs.dd.ui.DiagonalLayoutView
        android:id="@+id/bottom_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/black"
        app:diagonal_angle="7"
        />

</LinearLayout>
